--- a/TodolistApp/src/style.css
+++ b/TodolistApp/src/style.css
@@ -1,118 +1,56 @@
-/* Opinionated CSS defaults based on:
-  ! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css 
-*/
-
-html {
-  line-height: 1.2; 
-  -webkit-text-size-adjust: 100%; 
-}
-
-html, * {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", Helvetica, sans-serif;
-}
-
-body {
-  margin: 0;
-}
-
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-
-hr {
-  box-sizing: content-box; 
-  height: 0; 
-  overflow: visible; 
-}
-
-pre {
-  font-family: monospace, monospace; 
-  font-size: 1em; 
-}
-
-b, strong {
-  font-weight: bolder;
-}
-
-code, kbd, samp {
-  font-family: monospace, monospace; 
-  font-size: 1em;
-}
-
-small {
-  font-size: 80%;
-}
-
-sub, sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-sup {
-  top: -0.5em;
-}
-
-button, input, optgroup, select, textarea {
-  font-family: inherit; 
-  font-size: 100%; 
-  line-height: 1.15; 
-  margin: 0; 
-}
-
-button, select { 
-  text-transform: none;
-}
-
-button, [type="button"], [type="reset"], [type="submit"] {
-  -webkit-appearance: button;
-}
-
-button::-moz-focus-inner, [type="button"]::-moz-focus-inner, [type="reset"]::-moz-focus-inner, [type="submit"]::-moz-focus-inner {
-  border-style: none;
+*{
+  margin:0;
   padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
-
-button:-moz-focusring, [type="button"]:-moz-focusring, [type="reset"]:-moz-focusring, [type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText;
+.container{
+  width:100%;
+  min-height: 100vh;
+  background: linear-gradient(135deg,#153677,#4e085f);
+  padding: 10px;
 }
-
-fieldset {
-  padding: 0.35em 0.75em 0.625em;
+.todo-app{
+  width:100%;
+  max-width:540px;
+  background-color: #ffffff;
+  margin: 100px auto 20px;
+  padding: 40px 30px;
+  border-radius: 10px;
 }
-
-legend {
-  padding: 0;
+.todo-app h2{
+  color: #002765;
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
 }
-
-progress {
-  vertical-align: baseline;
+.todo-app h2 img{
+  width: 40px;
+  margin-left: 10px;
 }
-
-[type="number"]::-webkit-inner-spin-button, [type="number"]::-webkit-outer-spin-button {
-  height: auto;
+.row{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #edeff0;
+  border-radius: 30px;
+  padding-left: 20px;
 }
-
-[type="search"] {
-  -webkit-appearance: textfield;
-  outline-offset: -2px; 
+.row input{
+  flex: 1;
+  border: none;
+  outline: none;
+  background: transparent;
+  padding: 20px 40px;
+  font-size: 14px;
 }
-
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-::-webkit-file-upload-button {
-  -webkit-appearance: button; 
-  font: inherit; 
-}
-
-[hidden] {
-  display: none;
+.row  button{
+  border: none;
+  outline: none;
+  padding: 16px 50px;
+  background-color:#ff5945;
+  border-radius: 30px;
+  font-weight: 600;
+  font-size: 18px;
+  cursor:pointer; 
 }
