--- a/TodolistApp/src/style.css
+++ b/TodolistApp/src/style.css
@@ -54,3 +54,45 @@
   font-size: 18px;
   cursor:pointer; 
 }
+ul li{
+  list-style: none;
+  font-size: 17px;
+  padding: 12px 8px 12px  50px;
+  user-select: none;
+  cursor: pointer;
+  position: relative;
+}
+
+ul li::before{
+  content:"" ;
+  position: absolute;
+  height: 20px;
+  width: 20px;
+  background-image: url(Assets/unchecked.png);
+  background-size: cover;
+  background-position: center;
+  top: 12px;
+  left: 8px;
+}
+ul li.checked{
+  color: #555;
+  text-decoration: line-through;
+}
+ul li.checked::before{
+  background-image:url(Assets/checked.png);
+}
+ul li span{
+  position: absolute;
+  right: 0;
+  top: 5px;
+  width: 40px;
+  height: 40px;
+  font-size: 24px;
+  color:#555;
+  text-align: center;
+  
+}
+ul li span:hover{
+  background-color: #cec8c8;
+  border-radius: 50%;
+}
